--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
 		"multer": "^1.4.2",
 		"node-opencc": "^2.0.1",
 		"tmp-promise": "^2.0.2",
-		"unzip": "^0.1.11"
+		"unzipper": "^0.10.5"
 	}
 }
