--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"chardet": "^0.8.0",
 		"express": "^4.17.1",
 		"fs-extra": "^8.1.0",
+		"globby": "^11.0.0",
 		"iconv-lite": "^0.5.0",
 		"multer": "^1.4.2",
 		"node-opencc": "^2.0.1",
