--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"archiver": "^3.1.1",
 		"chardet": "^0.8.0",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"fs-extra": "^8.1.0",
 		"globby": "^11.0.0",
