--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"globby": "^11.0.0",
 		"iconv-lite": "^0.6.2",
 		"multer": "^1.4.2",
-		"node-opencc": "^2.0.1",
+		"opencc-js": "^0.3.0",
 		"pug": "^3.0.0",
 		"rate-limiter-flexible": "^2.1.10",
 		"tmp-promise": "^3.0.2",
