--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
 		"start": "node server/index.js"
 	},
 	"dependencies": {
-		"archiver": "^5.0.0",
-		"chardet": "^1.2.1",
+		"archiver": "^5.3.0",
+		"chardet": "^1.3.0",
 		"express": "^4.17.1",
-		"fs-extra": "^9.0.1",
-		"globby": "^11.0.0",
-		"iconv-lite": "^0.6.2",
-		"multer": "^1.4.2",
-		"opencc-js": "^0.3.0",
-		"pug": "^3.0.0",
+		"fs-extra": "^10.0.0",
+		"globby": "11.0.4",
+		"iconv-lite": "^0.6.3",
+		"multer": "^1.4.3",
+		"opencc-js": "^1.0.3",
+		"pug": "^3.0.2",
 		"tmp-promise": "^3.0.2",
 		"unzipper": "^0.10.5",
 		"xfetch-js": "^0.5.0"
