--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
 		"start": "node server/index.js"
 	},
 	"dependencies": {
-		"archiver": "^5.3.0",
-		"chardet": "^1.3.0",
-		"express": "^4.17.1",
-		"fs-extra": "^10.0.0",
-		"globby": "11.0.4",
+		"archiver": "^5.3.1",
+		"chardet": "^1.5.0",
+		"express": "^4.18.2",
+		"fs-extra": "^10.1.0",
+		"globby": "^11.1.0",
 		"iconv-lite": "^0.6.3",
-		"multer": "^1.4.3",
-		"opencc-js": "^1.0.3",
+		"multer": "^1.4.5-lts.1",
+		"opencc-js": "^1.0.4",
 		"pug": "^3.0.2",
-		"tmp-promise": "^3.0.2",
+		"tmp-promise": "^3.0.3",
 		"unzipper": "^0.10.5",
 		"xfetch-js": "^0.5.0"
 	}
