--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
 		"start": "node server/index.js"
 	},
 	"dependencies": {
-		"archiver": "^5.3.1",
-		"chardet": "^1.5.1",
+		"archiver": "^6.0.1",
+		"chardet": "^2.0.0",
 		"express": "^4.18.2",
-		"fs-extra": "^11.1.0",
+		"fs-extra": "^11.2.0",
 		"globby": "^11.1.0",
 		"iconv-lite": "^0.6.3",
 		"multer": "^1.4.5-lts.1",
@@ -22,7 +22,10 @@
 		"pug": "^3.0.2",
 		"tempfile": "3",
 		"tmp-promise": "^3.0.3",
-		"unzipper": "^0.10.5",
-		"xfetch-js": "^0.5.0"
+		"unzipper": "^0.10.14",
+		"xfetch-js": "^0.6.0"
+	},
+	"engines": {
+		"node": "18.15.0"
 	}
 }
