--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
 		"start": "node server/index.js"
 	},
 	"dependencies": {
-		"archiver": "^6.0.1",
+		"archiver": "^7.0.1",
 		"chardet": "^2.0.0",
-		"express": "^4.18.2",
+		"express": "^4.19.2",
 		"fs-extra": "^11.2.0",
-		"globby": "^11.1.0",
+		"globby": "^14.0.2",
 		"iconv-lite": "^0.6.3",
 		"multer": "^1.4.5-lts.1",
 		"opencc-js": "^1.0.5",
-		"pug": "^3.0.2",
-		"tempfile": "3",
+		"pug": "^3.0.3",
+		"tempfile": "5.0.0",
 		"tmp-promise": "^3.0.3",
 		"xfetch-js": "^0.6.0"
 	},
 	"resolutions": {
-		"is-regex": "npm:@nolyfill/is-regex@latest",
-		"typedarray": "npm:@nolyfill/typedarray@latest"
+		"is-regex": "npm:@nolyfill/is-regex@^1",
+		"typedarray": "npm:@nolyfill/typedarray@^1"
 	}
 }
