--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"dependencies": {
 		"archiver": "^7.0.1",
 		"chardet": "^2.0.0",
-		"express": "^4.19.2",
+		"express": "^5.0.0",
 		"fs-extra": "^11.2.0",
 		"globby": "^11.1.0",
 		"iconv-lite": "^0.6.3",
@@ -26,6 +26,14 @@
 	},
 	"resolutions": {
 		"is-regex": "npm:@nolyfill/is-regex@^1",
-		"typedarray": "npm:@nolyfill/typedarray@^1"
+		"typedarray": "npm:@nolyfill/typedarray@^1",
+		"function-bind": "npm:@nolyfill/function-bind@^1",
+		"gopd": "npm:@nolyfill/gopd@^1",
+		"has-property-descriptors": "npm:@nolyfill/has-property-descriptors@^1",
+		"has-proto": "npm:@nolyfill/has-proto@^1",
+		"has-symbols": "npm:@nolyfill/has-symbols@^1",
+		"hasown": "npm:@nolyfill/hasown@^1",
+		"set-function-length": "npm:@nolyfill/set-function-length@^1",
+		"side-channel": "npm:@nolyfill/side-channel@^1"
 	}
 }
